examples/test/testpolicy19620.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19620
  namespace: namespace118
spec:
  podSelector:
    matchLabels:
      key8: value32
      key33: value2
      key16: value42
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key23: value29
          key31: value34
          key5: value16
      podSelector:
        matchLabels:
          key13: value31
